--- a/src/trang-chu/san-pham-chi-tiet.html
+++ b/src/trang-chu/san-pham-chi-tiet.html
@@ -9,7 +9,7 @@
 <body>
 <div class="w-[100%] mx-auto ">
     <div class="flex justify-center pt-5">
-        <div class="flex gap-4 items-center w-[1170px]">
+        <div class="flex gap-4 items-center w-[1170px] pl-3">
             <div><span class="text-[#4F4F4F] text-[14px]">Trang chủ</span></div>
             <div><img src="../assets/images/img-kien/breadcumb.svg" alt=""></div>
             <div><span class="text-[#C4C4C4] text-[14px]">Thảo dược</span></div>
@@ -110,7 +110,7 @@
             </div>
             <div class="mt-9">
                 <div>
-            <span class="flex flex-wrap text-[#4F4F4F] ">
+            <span class="flex flex-wrap text-[#4F4F4F] pl-2">
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 <br>
                 <br>
@@ -118,13 +118,13 @@
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui. officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem
             </span>
                 </div>
-                <div class="my-[51px]">
+                <div class="my-[51px] p-2">
                     <img src="../assets/images/img-kien/img_4.png" alt="">
                 </div>
-                <div class="pb-[37px]">
-                    <span class="text-[28px] text-[#4F4F4F] sm:text-[16px]">Sản phẩm từ nông trại hữu cơ</span>
+                <div class="pb-[37px] flex place-content-center">
+                    <span class="md:text-[28px] text-[20px] text-[#4F4F4F]">Sản phẩm từ nông trại hữu cơ</span>
                 </div>
-                <div class="pb-[34px]">
+                <div class="pb-[34px] pl-3">
             <span class="sm:block md: p-0">
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 <br><br>
@@ -132,7 +132,7 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui. officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolorem
             </span>
                 </div>
-                <div>
+                <div class="p-3">
                     <img src="../assets/images/img-kien/img_5.png" alt="">
                 </div>
             </div>
@@ -141,12 +141,12 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
     <div class="flex place-content-center">
         <div class="flex w-full max-w-[1170px] justify-start gap-2 flex-col">
             <div class="flex justify-start">
-                <div class="flex max-w-[1170px] w-full flex-row sm:flex sm:place-content-center sm:mt-4">
+                <div class="flex max-w-[1170px] w-full flex-row place-content-center mt-3">
                     <div>
                         <img src="../assets/images/img-kien/la.svg" alt="">
                     </div>
                     <div>
-                        <span class="text-[28px] font-bold uppercase text-[#333333] sm:text-[16px] sm:gap-4">Sản phẩm liên quan</span>
+                        <span class="md:text-[28px] text-[20px] font-bold uppercase text-[#333333]">Sản phẩm liên quan</span>
                     </div>
                 </div>
             </div>
@@ -217,11 +217,11 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
     <div class="w-full bg-[#FAFAFA]">
         <div class="flex place-content-center">
             <div class="pt-16 md:flex gap-24 md:place-content-center w-full md:flex-row max-w-[1920px] sm:flex-col">
-                <div class="flex">
+                <div class="flex p-2">
                     <img class="flex-shrink" src="../assets/images/img-kien/anh-dat.svg" alt="">
                 </div>
                 <div>
-                    <div class="flex items-center gap-2 sm:place-content-center sm:mt-4">
+                    <div class="flex items-center gap-2 place-content-center">
                         <div>
                             <img src="../assets/images/img-kien/la.svg" alt="">
                         </div>
@@ -229,37 +229,38 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
                             <span class="md:text-[28px] sm:text-[16px] font-bold ">TẠI SAO LỰA CHỌN NÔNG THẢO?</span>
                         </div>
                     </div>
-                    <div class="md: my-5  sm: p-4">
+                    <div class="my-5">
                         <span>Chúng tôi mang đến cho bạn các sản<br> phẩm nông sản và thảo dược được sản xuất sạch bền vững và không có hóa chất.</span>
                     </div>
-                    <div class="flex gap-4 sm:p-4">
-                        <div class="sm: pt-12 md:pt-0">
-                            <img src="../assets/images/img-kien/line.svg" alt="">
+                    <div class="flex gap-4">
+                        <div class="flex items-center max-w-[100px] w-full">
+                            <!-- Thêm class mới cho hình ảnh -->
+                            <img src="../assets/images/img-kien/line.svg" alt="" class="h-full object-cover">
                         </div>
                         <div class="flex flex-col">
                             <!-- Mục 100% hữu cơ -->
                             <div class="flex-grow">
                                 <div>
-                <span class="text-[#356C07] text-[21px] sm:text-[16px] font-bold leading-[48px] sm:leading-[28px]">
+                <span class="text-[#356C07] md:text-[21px] text-[16px] font-bold leading-[48px]">
                     100% hữu cơ
                 </span>
                                 </div>
                                 <div>
-                <span class="leading-[28px] sm:leading-[22px] text-base sm:text-sm">
-                    Thực hành tốt trồng trọt theo tiêu chuẩn GACP-WHO<br> để nguyên liệu an toàn cho sức khỏe của bạn
+                <span class="leading-[28px] md:text-base text-[14px]">
+                    Thực hành tốt trồng trọt theo tiêu chuẩn GACP-WHO để nguyên liệu an toàn cho sức khỏe của bạn
                 </span>
                                 </div>
                             </div>
 
                             <!-- Mục Công nghệ -->
-                            <div class="flex-grow md: my-9 sm: my-4">
+                            <div class="flex-grow md:my-9 sm:my-4">
                                 <div>
-                <span class="text-[#356C07] text-[21px] sm:text-[16px] font-bold leading-[48px] sm:leading-[28px]">
+                <span class="text-[#356C07] md:text-[21px] text-[16px] font-bold leading-[48px]">
                     Công nghệ
                 </span>
                                 </div>
                                 <div>
-                <span class="leading-[28px] sm:leading-[22px] text-base sm:text-sm">
+                <span class="leading-[28px] text-[14px] md:text-[16px]">
                     Áp dụng công nghệ sản xuất tiêu chuẩn tùy theo loại sản phẩm.<br> Tuân thủ phương pháp sản xuất khoa học, an toàn.
                 </span>
                                 </div>
@@ -268,16 +269,19 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
                             <!-- Mục Trách nhiệm -->
                             <div class="flex-grow">
                                 <div>
-                <span class="text-[#356C07] text-[21px] sm:text-[16px] font-bold leading-[48px] sm:leading-[28px]">
+                <span class="text-[#356C07] md:text-[21px] text-[16px] font-bold leading-[48px]">
                     Trách nhiệm
-                </span></div><div>
-                <span class="leading-[28px] sm:leading-[22px] text-base sm:text-sm">
+                </span>
+                                </div>
+                                <div>
+                <span class="leading-[28px] md:text-[16px] text-[14px]">
                     Nông Thảo chăm chút từng khâu sản xuất, kiểm định và phân phối<br> để sản phẩm đến tay bạn có chất lượng tốt nhất
                 </span>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
