--- a/src/trang-chu/trang-chu.html
+++ b/src/trang-chu/trang-chu.html
@@ -8,53 +8,55 @@
 </head>
 <body>
 <div class="w-full relative">
-    <div class="flex flex-col absolute right-0 top-[4059px] gap-4 ">
-        <div><img src="../assets/images/img-kien/call-fail.svg" alt=""></div>
-        <div><img src="../assets/images/img-kien/message.svg" alt=""></div>
-        <div><img src="../assets/images/img-kien/tang.svg" alt=""></div>
+    <div class="md:block hidden">
+        <div class="flex flex-col absolute right-0 top-[4059px] gap-4 ">
+            <div><img src="../assets/images/img-kien/call-fail.svg" alt=""></div>
+            <div><img src="../assets/images/img-kien/message.svg" alt=""></div>
+            <div><img src="../assets/images/img-kien/tang.svg" alt=""></div>
+        </div>
     </div>
     <div class="pb-12">
         <div class="max-w-[1920px] mx-auto font-nunito ">
             <div class="w-full">
                 <img src="../assets/images/img-kien/banner.svg" class="object-cover w-full" alt="Banner">
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 justify-items-center pt-[46px]">
+            <div class="grid grid-cols-2 md:grid-cols-4 md:gap-4 gap-2 justify-items-center pt-[46px]">
                 <div class="flex flex-col items-center text-center gap-2">
                     <div>
-                        <img src="../assets/images/img-kien/ship.svg" alt="Ship toàn quốc" class="mb-2">
+                        <img src="../assets/images/img-kien/ship.svg" alt="Ship toàn quốc">
                     </div>
                     <div>
-                        <span class="block font-bold text-base md:text-lg">CHẤT LƯỢNG</span>
-                        <span class="block text-gray-600 text-sm md:text-base">Sản phẩm tốt nhất</span>
+                        <span class="block font-bold text-base md:text-lg text-[#356C07]">CHẤT LƯỢNG</span>
+                        <span class="block text-sm md:text-base text-[#424242] ">Sản phẩm tốt nhất</span>
                     </div>
                 </div>
 
                 <div class="flex flex-col items-center text-center gap-2">
                     <div>
-                        <img src="../assets/images/img-kien/credecial.svg" alt="Chất lượng" class="mb-2">
+                        <img src="../assets/images/img-kien/credecial.svg" alt="Chất lượng">
                     </div>
                     <div>
-                        <span class="block uppercase font-bold text-base md:text-lg">7 NGÀY ĐỔI TRẢ</span>
+                        <span class="block uppercase font-bold text-base md:text-lg text-[#356C07]">7 NGÀY ĐỔI TRẢ</span>
                         <span class="block text-[#424242] text-sm md:text-base">Áp dụng cho tất cả đơn hàng</span>
                     </div>
                 </div>
 
                 <div class="flex flex-col items-center text-center gap-2">
                     <div>
-                        <img src="../assets/images/img-kien/doi-tra.svg" alt="7 Ngày đổi trả" class="mb-2">
+                        <img src="../assets/images/img-kien/doi-tra.svg" alt="7 Ngày đổi trả">
                     </div>
                     <div>
-                        <span class="block font-bold text-base md:text-lg">TƯ VẤN ONLINE</span>
+                        <span class="block font-bold text-base md:text-lg text-[#356C07]">TƯ VẤN ONLINE</span>
                         <span class="block text-[#424242] text-sm md:text-base">Hỗ trợ 24/7</span>
                     </div>
                 </div>
 
                 <div class="flex flex-col items-center text-center gap-2">
                     <div>
-                        <img src="../assets/images/img-kien/earphone.svg" alt="Tư vấn online" class="mb-2">
+                        <img src="../assets/images/img-kien/earphone.svg" alt="Tư vấn online">
                     </div>
                     <div>
-                        <span class="block font-bold text-base md:text-lg">SHIP TOÀN QUỐC</span>
+                        <span class="block font-bold text-base md:text-lg text-[#356C07]">SHIP TOÀN QUỐC</span>
                         <span class="block text-[#424242] text-sm md:text-base">Miễn phí đơn hàng từ 500K</span>
                     </div>
                 </div>
@@ -65,13 +67,13 @@
                         <img src="../assets/images/img-kien/la.svg" alt="">
                     </div>
                     <div class="uppercase text-center">
-                        <h1 class="text-[24px] md:text-[30px] font-bold text-[#1A1A1A]">Sản phẩm bán chạy</h1>
+                        <h1 class="text-[16px] md:text-[24px] font-bold text-[#1A1A1A]">Sản phẩm bán chạy</h1>
                     </div>
                 </div>
             </div>
         </div>
         <div>
-            <div class="flex flex-wrap gap-[30px] justify-center mt-[41px] mb-10">
+            <div class="flex overflow-x-scroll md:overflow-hidden lg:overflow-x-hidden gap-[30px] justify-center mt-[41px] mb-10">
                 <div class="relative flex items-center">
                     <button class="absolute top-2/5 transform -translate-y-1/2">
                         <img src="../assets/images/img-kien/prev.svg" alt="">
@@ -124,7 +126,6 @@
                         </button>
                     </div>
                 </div>
-
             </div>
         </div>
         <div class="flex flex-row place-content-center my-[30px]">
@@ -342,15 +343,15 @@
             <img src="../assets/images/img-kien/anh-dat.svg" alt="">
         </div>
         <div>
-            <div class="flex items-center gap-2">
+            <div class="flex gap-2 place-content-center">
                 <div>
                     <img src="../assets/images/img-kien/la.svg" alt="">
                 </div>
                 <div>
-                    <span class="text-[24px] font-bold">TẠI SAO LỰA CHỌN NÔNG THẢO?</span> <!-- Giảm kích thước chữ -->
+                    <span class="md:text-[24px] text-[16px] font-bold">TẠI SAO LỰA CHỌN NÔNG THẢO?</span>
                 </div>
             </div>
-            <div class="my-5">
+            <div class="my-5 p-2">
                 <span class="text-sm">Chúng tôi mang đến cho bạn các sản<br> phẩm nông sản và thảo dược được sản xuất sạch bền vững và không có hóa chất.</span> <!-- Giảm kích thước chữ -->
             </div>
             <div class="flex gap-4">
@@ -388,14 +389,14 @@
     </div>
     <div class="flex gap-4 place-content-center items-center pt-[60px] pb-[36px] ">
         <div><img src="../assets/images/img-kien/la.svg" alt=""></div>
-        <div><span class="uppercase text-[28px] font-bold leading-[38px]">tin tức & kiến thức</span></div>
+        <div><span class="uppercase md:text-[24px] text-[16px] font-bold leading-[38px]">tin tức & kiến thức</span></div>
     </div>
     <div class="flex flex-col sm:flex-row place-content-center gap-8">
-        <div class="w-full sm:w-[370px] h-[465px] shadow-lg shadow-amber-830">
+        <div class="w-full sm:w-[370px] h-[465px] shadow-lg shadow-amber-830 p-2">
             <div>
-                <img src="../assets/images/img-kien/ca-chua.svg" alt="Tomato" class="w-full h-auto rounded-t-lg">
+                <img src="../assets/images/img-kien/ca-chua.svg" alt="Tomato" class="w-full h-auto">
             </div>
-            <div class="p-0 sm:p-5">
+            <div class="p-2">
                 <div>
                     <span class="uppercase my-[10px] text-[#68C114] text-[12px] leading-[16.37px]">Nông nghiệp sạch</span>
                 </div>
@@ -406,7 +407,7 @@
                     <span class="text-[#000000BD] font-[400] leading-[22.55px]">Mời bạn đọc tìm hiểu thêm về quy trình trồng và thu hoạch cà chua hữu cơ của...</span>
                 </div>
                 <hr class="p-2 m-3 border-t border-gray-300">
-                <div class="flex justify-between w-full mt-2">
+                <div class="flex justify-between w-full">
                     <div class="flex gap-2 items-center">
                         <div class="uppercase text-sm">Xem chi tiết</div>
                         <div>
@@ -425,11 +426,11 @@
             </div>
         </div>
 
-        <div class="w-full sm:w-[370px] h-[465px] shadow-lg shadow-amber-830">
+        <div class="w-full sm:w-[370px] h-[465px] shadow-lg shadow-amber-830 p-2">
             <div>
-                <img src="../assets/images/img-kien/ca-chua.svg" alt="Tomato" class="w-full h-auto rounded-t-lg">
+                <img src="../assets/images/img-kien/ca-chua.svg" alt="Tomato" class="w-full h-auto">
             </div>
-            <div class="p-0 sm:p-5">
+            <div class="p-2">
                 <div>
                     <span class="uppercase my-[10px] text-[#68C114] text-[12px] leading-[16.37px]">Nông nghiệp sạch</span>
                 </div>
@@ -440,7 +441,7 @@
                     <span class="text-[#000000BD] font-[400] leading-[22.55px]">Mời bạn đọc tìm hiểu thêm về quy trình trồng và thu hoạch cà chua hữu cơ của...</span>
                 </div>
                 <hr class="p-2 m-3 border-t border-gray-300">
-                <div class="flex justify-between w-full mt-2">
+                <div class="flex justify-between w-full">
                     <div class="flex gap-2 items-center">
                         <div class="uppercase text-sm">Xem chi tiết</div>
                         <div>
@@ -459,11 +460,11 @@
             </div>
         </div>
 
-        <div class="w-full sm:w-[370px] h-[465px] shadow-lg shadow-amber-830">
+        <div class="w-full sm:w-[370px] h-[465px] shadow-lg shadow-amber-830 p-2">
             <div>
-                <img src="../assets/images/img-kien/ca-chua.svg" alt="Tomato" class="w-full h-auto rounded-t-lg">
+                <img src="../assets/images/img-kien/ca-chua.svg" alt="Tomato" class="w-full h-auto">
             </div>
-            <div class="p-0 sm:p-5">
+            <div class="p-2">
                 <div>
                     <span class="uppercase my-[10px] text-[#68C114] text-[12px] leading-[16.37px]">Nông nghiệp sạch</span>
                 </div>
@@ -474,7 +475,7 @@
                     <span class="text-[#000000BD] font-[400] leading-[22.55px]">Mời bạn đọc tìm hiểu thêm về quy trình trồng và thu hoạch cà chua hữu cơ của...</span>
                 </div>
                 <hr class="p-2 m-3 border-t border-gray-300">
-                <div class="flex justify-between w-full mt-2">
+                <div class="flex justify-between w-full">
                     <div class="flex gap-2 items-center">
                         <div class="uppercase text-sm">Xem chi tiết</div>
                         <div>
