--- a/src/trang-chu/thong-tin-don-hang.html
+++ b/src/trang-chu/thong-tin-don-hang.html
@@ -10,15 +10,15 @@
 <div class="w-[100%] mx-auto ">
     <div class="flex justify-center pt-5">
         <div class="flex gap-4 items-center w-[1170px]">
-            <div><img src="../assets/images/img-kien/breadcumb.svg" alt=""></div>
-            <div><span class="text-[#C4C4C4] text-[14px]">Trang trước</span></div>
+            <div><img src="../assets/images/img-kien/lui.svg" alt=""></div>
+            <div><span class="text-[#356C07] font-[400] text-[14px]">Trang trước</span></div>
         </div>
     </div>
     <div class="flex place-content-center">
         <div class="flex w-full max-w-[1170px] flex-col gap-[35px]">
-            <div class="flex xl:flex-row flex-col justify-between">
-                <div class="xl:block hidden">
-                    <div class="flex flex-col w-full max-w-[770px] py-12">
+            <div class="flex md:flex-row flex-col justify-between">
+                <div class="max-w-[770px] w-full">
+                    <div class="flex flex-col py-12">
                         <h2 class="text-lg font-semibold mb-4 bg-[#EBF1E7] pl-[21px] py-4 uppercase">A. Thông tin GIỎ HÀNG</h2>
                         <div class="xl:block hidden">
                             <div class="bg-[#F2FFF9] flex flex-row py-3">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                     <div class="flex justify-center items-center">
-                        <div class="hidden xl:block">
+                        <div class="hidden md:block">
                             <button class="w-[318px] h-[51px] bg-[#E10000] text-[18px] text-white font-bold rounded-[5px]">ĐẶT
                                 HÀNG NGAY
                             </button>
