--- a/src/trang-chu/trang-chu.html
+++ b/src/trang-chu/trang-chu.html
@@ -7,6 +7,44 @@
     <title>Document</title>
 </head>
 <body>
+<header class="bg-white border-b border-gray-300 shadow-lg fixed top-0 left-0 right-0 z-50">
+    <div class="max-w-[1170px] mx-auto">
+        <div class="flex justify-between items-center px-[15px] md:px-0">
+            <div class="md:hidden w-[30px] flex items-center">
+                <div class="w-[24px]">
+                    <img class="w-full object-cover" src="../assets/images/img-andrew/menu-header.svg" alt="">
+                </div>
+            </div>
+            <div class="w-[138px] md:w-[229px] pb-[16px] pt-[8px] md:pb-[18px] md:pt-[18px]">
+                <img src="/src/assets/images/img-dzung/logo.png" alt="Nông Thảo" class="w-full object-cover">
+            </div>
+            <nav class="hidden md:flex flex-1 justify-center">
+                <ul class="flex gap-[32px]">
+                    <li>
+                        <a href="#" class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">SẢN PHẨM</a>
+                    </li>
+                    <li>
+                        <a href="#" class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">VỀ NÔNG THẢO</a>
+                    </li>
+                    <li>
+                        <a href="#" class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">BLOG</a>
+                    </li>
+                    <li>
+                        <a href="#" class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">LIÊN HỆ</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="w-[30px] md:w-[229px] flex items-center justify-end gap-[17px]">
+                <button class="w-[36px] hidden md:block">
+                    <img src="/src/assets/images/img-dzung/search.png" alt="Search" class="w-full object-cover">
+                </button>
+                <button class="w-[38px]">
+                    <img src="/src/assets/images/img-dzung/cart.png" alt="Cart" class="w-full object-cover">
+                </button>
+            </div>
+        </div>
+    </div>
+</header>
 <div class="w-full relative">
     <div class="md:block hidden">
         <div class="flex flex-col absolute right-0 top-[4059px] gap-4 ">
@@ -502,5 +540,162 @@
         <div class="border-t border-[#356C07] mt-2 w-[160px]"></div>
     </div>
 </div>
+<footer class="w-full bg-[#356C07] font-nunito ">
+    <div class="max-w-[1920px] mx-auto grid grid-cols-3 md:grid-cols-8">
+        <div class="col-span-1">
+            <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-1.png" alt="">
+        </div>
+        <div class="col-span-1">
+            <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-2.png" alt="">
+        </div>
+        <div class="col-span-1">
+            <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-3.png" alt="">
+        </div>
+        <div class="hidden md:block col-span-1">
+            <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-1.png" alt="">
+        </div>
+        <div class="hidden md:block col-span-1">
+            <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-2.png" alt="">
+        </div>
+        <div class="hidden md:block col-span-1">
+            <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-3.png" alt="">
+        </div>
+        <div class="hidden md:block col-span-1">
+            <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-1.png" alt="">
+        </div>
+        <div class="hidden md:block col-span-1">
+            <img class="w-full object-cover" src="\src\assets\images\img-dzung\footer-2.png" alt="">
+        </div>
+    </div>
+    <div class="max-w-[1170px] mx-auto grid grid-cols-1 md:grid-cols-3 pt-[37.5px] pb-[30px]">
+        <div class="px-[25px] md:px-0 mr-0 md:mr-[74px] col-span-1 flex justify-between text-white">
+            <div class="">
+                <div class="max-w-[262px]">
+                    <div class="w-full">
+                        <img src="\src\assets\images\img-dzung\lgfooter.png" alt="Nông Thảo"
+                             class="h-10 mb-4 brightness-200">
+                    </div>
+                    <div class="w-full">
+                        <img src="\src\assets\images\img-dzung\tinhhoa.png" alt="Nông Thảo"
+                             class="h-auto mb-4 brightness-200">
+                    </div>
+                </div>
+                <p class="mt-[24px] text-sm font-nunito text-[14px] text-[#FFFFFFCC]">MST: 0123456789/10 - Ngày cấp:
+                    15/02/2023</p>
+                <p class="mt-[20px] text-sm font-nunito text-[14px] text-[#FFFFFFCC]">Nơi cấp: Sở KH&ĐT TP Hồ Chí
+                    Minh</p>
+                <div class="flex font-nunito text-[#FFFFFFCC] items-center gap-[15px] mt-[22px]">
+                    <div class="font-nunito text-[#FFFFFF]">Liên kết</div>
+                    <div class="flex gap-[10px]">
+                        <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                src="/src/assets/images/img-dzung/shopee.png" alt="YouTube"
+                                class="w-full object-cover"></a>
+                        <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                src="/src/assets/images/img-dzung/tiki.png" alt="YouTube"
+                                class="w-full object-cover"></a>
+                        <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                src="/src/assets/images/img-dzung/tiktok.png" alt="YouTube"
+                                class="w-full object-cover"></a>
+                        <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                src="/src/assets/images/img-dzung/tiki.png" alt="YouTube"
+                                class="w-full object-cover"></a>
+                        <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                src="/src/assets/images/img-dzung/shopee.png" alt="YouTube"
+                                class="w-full object-cover"></a>
+                        <a href="#" class="text-white hover:text-gray-300 font-nunito w-[26px]"><img
+                                src="/src/assets/images/img-dzung/face.png" alt="YouTube"
+                                class="w-full object-cover"></a>
+                    </div>
+                </div>
+                <div class="block md:hidden my-[15px] border-[0.5px] border-[#EBF0FFB2]"></div>
+            </div>
+        </div>
+        <div class="px-[25px] md:px-0 col-span-1 md:col-span-2 font-nunito">
+            <div class="grid grid-cols-1 md:grid-cols-3">
+                <div class="col-span-1">
+                    <div class="font-semibold md:font-bold text-[14px] text-white">LIÊN HỆ</div>
+                    <div class="block md:hidden my-[15px] border-[0.5px] border-[#EBF0FFB2]"></div>
+                    <div class="hidden md:flex mt-[23px]">
+                        <div class="w-[20px] mr-[12px]">
+                            <img class="w-full object-cover" src="../assets/images/img-andrew/icon-location.svg"
+                                 alt="">
+                        </div>
+                        <div class="flex-1 text-[#ffffffcc] text-[14px]">
+                            Tầng 4-5-6, Tòa nhà Capital Place, số 29 đường Liễu Giai, P.Ngọc Khánh, Q.Ba Đình, Hà
+                            Nội
+                        </div>
+                    </div>
+                    <div class="hidden md:flex mt-[12px]">
+                        <div class="w-[20px] mr-[12px]">
+                            <img class="w-full object-cover" src="../assets/images/img-andrew/icon-phone.svg"
+                                 alt="">
+                        </div>
+                        <div class="flex-1 text-[#ffffffcc] text-[14px]">
+                            0969.71.6848
+                        </div>
+                    </div>
+                    <div class="hidden md:flex mt-[12px]">
+                        <div class="w-[20px] mr-[12px]">
+                            <img class="w-full object-cover" src="../assets/images/img-andrew/icon-mail.svg" alt="">
+                        </div>
+                        <div class="flex-1 text-[#ffffffcc] text-[14px]">
+                            hotro@nongthao.vn
+                        </div>
+                    </div>
+                </div>
+                <div class="col-span-1 md:mx-auto md:max-w-[152px]">
+                    <div class="w-full">
+                        <div class="font-[600] md:font-bold text-[14px] text-white">THÔNG TIN</div>
+                        <div class="block md:hidden my-[15px] border-[0.5px] border-[#EBF0FFB2]"></div>
+                        <ul class="hidden md:block mt-[15px]">
+                            <li class="text-[#ffffffcc] text-[14px]"><span class="font-[900]">.</span> Giới thiệu
+                                Nông Thảo</li>
+                            <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span>
+                                Điều khoản</li>
+                            <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span>
+                                Chính sách bảo mật</li>
+                            <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span>
+                                Hướng dẫn mua hàng</li>
+                            <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span> Trả
+                                hàng & hoàn tiền</li>
+                            <li class="text-[#ffffffcc] mt-[10px] text-[14px]"><span class="font-[900]">.</span>
+                                Nông Thảo Blogs</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-span-1">
+                    <div class="font-[600] md:font-bold text-[14px] text-white">ĐĂNG KÍ NHẬN TIN</div>
+                    <div class="text-[#ffffffcc] text-[14px] mt-[23px]">Vui lòng nhập email để nhận thêm nhiều ưu
+                        đãi từ Nông Thảo</div>
+                    <div class="flex mt-[9px]">
+                        <form class="flex-1" action="">
+                            <input class="placeholder:text-[14px] w-full py-[10px] md:py-[13px] pl-[14px]" type="text"
+                                   placeholder="Email của bạn...">
+                        </form>
+                        <div class="bg-[#68c114] w-[47px] flex items-center justify-center">
+                            <div class="w-[24px]">
+                                <img class="w-full object-cover"
+                                     src="../assets/images/img-andrew/icon-mail-footer.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex justify-between mt-[33px]">
+                        <div class="w-[130px]">
+                            <img class="w-full object-cover" src="../assets/images/img-andrew/footer-item1.svg"
+                                 alt="">
+                        </div>
+                        <div class="w-[83px]">
+                            <img class="w-full object-cover" src="../assets/images/img-andrew/footer-item2.svg"
+                                 alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="text-[12px] md:text-[14px] py-[11px] flex justify-center bg-[#85a76a] text-[#ffffffcc]">
+        @2022 - Bản quyền thuộc về Công ty Nông Thảo
+    </div>
+</footer>
 </body>
 </html>
