--- a/src/danh-muc-page/header.html
+++ b/src/danh-muc-page/header.html
@@ -11,17 +11,19 @@
         <div class="max-w-[1170px] mx-auto">
             <div class="flex justify-between items-center px-[15px] md:px-0">
                 <div class="md:hidden w-[30px] flex items-center">
-                    <div class="w-[24px]">
-                        <img class="w-full object-cover" src="../assets/images/img-andrew/menu-header.svg" alt="">
+                        <div class="w-[24px]">
+                                <img class="w-full object-cover" src="../assets/images/img-andrew/menu-header.svg" alt="">
+                        </div>
+                </div>
+                <a class="cursor-pointer" href="../trang-chu/trang-chu.html">
+                    <div class="w-[138px] md:w-[229px] pb-[16px] pt-[8px] md:pb-[18px] md:pt-[18px]">
+                        <img src="/src/assets/images/img-dzung/logo.png" alt="Nông Thảo" class="w-full object-cover">
                     </div>
-                </div>
-                <div class="w-[138px] md:w-[229px] pb-[16px] pt-[8px] md:pb-[18px] md:pt-[18px]">
-                    <img src="/src/assets/images/img-dzung/logo.png" alt="Nông Thảo" class="w-full object-cover">
-                </div>
+                </a>
                 <nav class="hidden md:flex flex-1 justify-center">
                     <ul class="flex gap-[32px]">
                         <li>
-                            <a href="#" class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">SẢN PHẨM</a>
+                            <a href="../trang-chu/trang-chu.html" class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">SẢN PHẨM</a>
                         </li>
                         <li>
                             <a href="#" class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">VỀ NÔNG THẢO</a>
