--- a/src/bai-viet/baiviet.html
+++ b/src/bai-viet/baiviet.html
@@ -13,51 +13,7 @@
 </head>
 
 <body>
-    <header class="bg-white border-b border-gray-300 shadow-lg fixed top-0 left-0 right-0 z-50">
-        <div class="max-w-[1170px] mx-auto">
-            <div class="flex justify-between items-center px-[15px] md:px-0">
-                <div class="md:hidden w-[30px] flex items-center">
-                    <div class="w-[24px]">
-                        <img class="w-full object-cover" src="../assets/images/img-andrew/menu-header.svg" alt="">
-                    </div>
-                </div>
-                <div class="w-[138px] md:w-[229px] pb-[16px] pt-[8px] md:pb-[18px] md:pt-[18px]">
-                    <img src="/src/assets/images/img-dzung/logo.png" alt="Nông Thảo" class="w-full object-cover">
-                </div>
-                <nav class="hidden md:flex flex-1 justify-center">
-                    <ul class="flex gap-[32px]">
-                        <li>
-                            <a href="#"
-                                class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">SẢN
-                                PHẨM</a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">VỀ
-                                NÔNG THẢO</a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">BLOG</a>
-                        </li>
-                        <li>
-                            <a href="#"
-                                class="font-nunito text-gray-700 font-semibold text-base hover:text-[#356C07] transition duration-300">LIÊN
-                                HỆ</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="w-[30px] md:w-[229px] flex items-center justify-end gap-[17px]">
-                    <button class="w-[36px] hidden md:block">
-                        <img src="/src/assets/images/img-dzung/search.png" alt="Search" class="w-full object-cover">
-                    </button>
-                    <button class="w-[38px]">
-                        <img src="/src/assets/images/img-dzung/cart.png" alt="Cart" class="w-full object-cover">
-                    </button>
-                </div>
-            </div>
-        </div>
-    </header>
+    
     <div class=" bg-gray-200 pt-[80px] mx-auto">
         <div class="max-w-[1920px] mx-auto ">
             <div class="max-w-[1170px] bg-white mx-auto sm:w-full">
@@ -128,15 +84,15 @@
 
                                         <div class="bg-[#FAFCF9] w-auto">
                                             <div class="flex justify-between p-2">
-                                                <p class="text-[18px] font-bold font-nunito ml-4">Mục lục bài viết</p>
+                                                <p class="text-[18px] font-bold font-nunito ml-4 text-[#4F4F4F]">Mục lục bài viết</p>
                                                 <i id="toggleIcon"
                                                     class="fas fa-chevron-down items-center mr-3 cursor-pointer"></i>
                                             </div>
                                             <hr class="border-[0.5] border-gray-300 p-1 ml-4">
 
-                                            <h2 class="text-[16px] font-bold font-nunito ml-5">1. Quy trình làm đất</h2>
+                                            <h2 class="text-[16px] font-bold font-nunito ml-5 text-[#4F4F4F]">1. Quy trình làm đất</h2>
 
-                                            <h2 class="text-[15px] font-nomal ml-10">1.1. 5 bước xử lí đất đơn giản</h2>
+                                            <h2 class="text-[15px] font-nomal ml-10 text-[#4F4F4F]">1.1. 5 bước xử lí đất đơn giản</h2>
 
                                             <!-- Bước xử lý đất được ẩn -->
                                             <ul id="stepsList" class="list-disc ml-10 hidden">
@@ -147,7 +103,7 @@
                                                 <li>Bước 5: Kiểm tra độ ẩm</li>
                                             </ul>
 
-                                            <h2 class="text-[16px] font-bold font-nunito ml-5">2. Quy trình trồng</h2>
+                                            <h2 class="text-[16px] font-bold font-nunito ml-5 text-[#4F4F4F]">2. Quy trình trồng</h2>
                                         </div>
 
                                         <script>
@@ -168,7 +124,7 @@
 
                                         <img src="\src\assets\images\img-dzung\people.png" alt="2 nguoi Nông dân"
                                             class="max-w-full h-auto mb-5 mt-[20px]">
-                                        <div class="font-nunito text-[16px] font-normal text-left px-[18px] md:px-0">
+                                        <div class="font-nunito text-[16px] font-normal text-left px-[18px] md:px-0 text-[#4F4F4F]">
 
                                             Để hiểu rõ hơn chất lượng sản phẩm Cà chua hữu cơ của Nông Thảo mời bạn đọc
                                             tìm
@@ -182,9 +138,9 @@
                                         </div>
                                         <div class="px-[18px] md:px-0">
                                             <div
-                                                class="font-nunito text-[30px] font-bold leading-[40.92px] text-left mt-[20px] mb-[10px]">
+                                                class="font-nunito text-[#4F4F4F]  text-[24px] md:text-[30px] font-bold leading-[40.92px] text-left mt-[20px] mb-[10px]">
                                                 1. Quy trình làm đất</div>
-                                            <div class="font-nunito text-base font-normal  text-left">
+                                            <div class="font-nunito text-base font-normal  text-left text-[#4F4F4F] ">
                                                 Để hiểu rõ hơn chất lượng sản phẩm Cà chua hữu cơ của Nông Thảo mời bạn
                                                 đọc
                                                 tìm
@@ -200,10 +156,10 @@
                                                 trồng và thu hoạch theo tiêu chuẩn VietGap của chúng tôi.
                                             </div>
                                             <div
-                                                class="font-nunito text-[24px] font-bold leading-[40.92px] text-left mt-[10px]">
+                                                class="font-nunito text-[20px] md:text-[24px] font-bold leading-[40.92px] text-left mt-[10px] text-[#4F4F4F]">
                                                 1.1. 5 Bước xử lí đất đơn giản </div>
 
-                                            <ul class="list-disc list-inside mt-[10px]">
+                                            <ul class="list-disc list-inside mt-[10px] text-[#4F4F4F]">
                                                 <li class="font-nunito text-base font-normal  text-left">Bước 1</li>
                                                 <li class="font-nunito text-base font-normal  text-left">Bước 2</li>
                                                 <li class="font-nunito text-base font-normal  text-left">Bước 3</li>
@@ -212,7 +168,7 @@
 
                                             </ul>
                                             <div
-                                                class="font-nunito text-[30px] font-bold leading-[40.92px] text-left mt-[22px] mb-[10px]">
+                                                class="font-nunito text-[24px] md:text-[30px]  font-bold leading-[40.92px] text-left mt-[22px] mb-[10px] text-[#4F4F4F]">
                                                 2. Quy trình trồng</div>
                                             <div class="font-nunito text-base font-normal  text-left">
                                                 Để hiểu rõ hơn chất lượng sản phẩm Cà chua hữu cơ của Nông Thảo mời bạn
@@ -233,7 +189,7 @@
                                             <section class="mt-8">
                                                 <hr class="border-t-2 border-gray-300  ">
                                                 <div class="flex justify-between items-center p-2   ">
-                                                    <h2 class="text-l font-nomal ">06 bình luận</h2>
+                                                    <h2 class="text-l font-nomal text-[#4F4F4F]">06 bình luận</h2>
                                                     <div class="flex ">
                                                         <button
                                                             class="text-sm text-gray-600 hover:underline mr-[11px]">Chia
@@ -266,7 +222,7 @@
                                                                 class="w-[38px]  mr-3">
                                                             <div>
                                                                 <h3 class="font-semibold text-[#356C07]">Vi Khanh</h3>
-                                                                <p class="font-nunito text-base font-normal  text-left">
+                                                                <p class="font-nunito text-base font-normal text-[#4F4F4F] text-left">
                                                                     Thật
                                                                     là
                                                                     một bài viết quá hay về quy trình chăm sóc chanh
@@ -294,7 +250,7 @@
                                                                 class="w-10 h-10 rounded-full mr-3">
                                                             <div>
                                                                 <h3 class="font-semibold text-[#356C07]">Vi Khanh</h3>
-                                                                <p class="font-nunito text-base font-normal  text-left">
+                                                                <p class="font-nunito text-[#4F4F4F] text-base font-normal  text-left">
                                                                     Thật
                                                                     là
                                                                     một bài viết quá hay về quy trình chăm sóc chanh
@@ -321,7 +277,7 @@
                                                                 class="w-[38px]  mr-3">
                                                             <div>
                                                                 <h3 class="font-semibold text-[#356C07]">Vi Khanh</h3>
-                                                                <p class="font-nunito text-base font-normal  text-left">
+                                                                <p class="font-nunito  text-[#4F4F4F] text-base font-normal  text-left">
                                                                     Thật
                                                                     là
                                                                     một bài viết quá hay về quy trình chăm sóc chanh
@@ -348,7 +304,7 @@
                                                                 class="w-10 h-10 rounded-full mr-3">
                                                             <div>
                                                                 <h3 class="font-semibold text-[#356C07]">Vi Khanh</h3>
-                                                                <p class="font-nunito text-base font-normal text-left">
+                                                                <p class="font-nunito text-[#4F4F4F] text-base font-normal text-left">
                                                                     Thật
                                                                     là
                                                                     một bài viết quá hay về quy trình chăm sóc chanh
@@ -375,7 +331,7 @@
                                                     <form class=" bg-[#F6F6F6] p-5 w-full h-auto  ">
                                                         <h3 class="text-xl font-semibold mb-5">Để lại bình luận của bạn
                                                         </h3>
-                                                        <p class="font-nunito text-[16px] font-normal  text-left mb-4">
+                                                        <p class="font-nunito text-[#4F4F4F] ext-[16px] font-normal  text-left mb-4">
                                                             Địa
                                                             chỉ
                                                             email của bạn sẽ không được công bố. Các trường bắt buộc
